--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="pagina">
         <div
-id="cabecalho">cabecalho</div>
+id="cabecalho">cabeçalho</div>
         <div
 id="esquerda">esquerda</div>
     <h1>Lista não ordenada</h1>
