--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Desenvolvimento de aulas</title>
+    <title>Lobster Lovers Club</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
@@ -12,16 +12,16 @@
    
     <header>
         <div class="cabecalho">
-            <h1>DESENVOLVIMENTO DE AULAS - Pensamento Computacional</h1>
+            <h1>Lobster Lovers Club - Fan club/h1>
         </div>
     </header>
     
     <div id="menu">
         <h2>Menu de exemplos</h2>
         <ul>
-            <li><a href="Divs.html" target="_self">Exemplos com Divs</a></li>
+            <li><a href="Divs.html" target="_self">Blue Lobsters Photos</a></li>
             <br>
-            <li><a href="Imagem.html" target="_self">Exemplos com Imagens</a></li>
+            <li><a href="Imagem.html" target="_self">Red Lobsters Phoitos</a></li>
             
         </ul> 
  </div>
