--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
    
     <header>
         <div class="cabecalho">
-            <h1>Lobster Lovers Club - Fan club/h1>
+            <h1>Lobster Lovers Club</h1>
         </div>
     </header>
     
     <div id="menu">
-        <h2>Menu de exemplos</h2>
+        <h2>Confira suas lagostas preferidas!</h2>
         <ul>
             <li><a href="Divs.html" target="_self">Blue Lobsters Photos</a></li>
             <br>
