--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul> 
  </div>
     <div id="principal">
-       <h1><img src="imagens/pensamento_computacional.jpeg" class="imagemcomputacional"></h1>
+       <h1><img src="imagens/Lobsters.jpeg" class="imagemlagostal"></h1>
     </div>
     
 </body>
