--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <ul>
             <li><a href="Divs.html" target="_self">Blue Lobsters Photos</a></li>
             <br>
-            <li><a href="Imagem.html" target="_self">Red Lobsters Phoitos</a></li>
+            <li><a href="Imagem.html" target="_self">Red Lobsters Photos</a></li>
+            <br>
+            <li><a href="Divs.html" target="_self">Purple Lobsters Photos</a></li>
+            <br>
+            <li><a href="Imagem.html" target="_self">Yellow Lobsters Photos</a></li>
             
         </ul> 
  </div>
