--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul> 
  </div>
     <div id="principal">
-       <h1><img src="imagens/Lobsters.jpeg" class="imagemlagostal"></h1>
+       <h1><img src="Lobsters.jpeg" class="imagemlagostal"></h1>
     </div>
     
 </body>
