--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <br>
             <li><a href="Imagem.html" target="_self">Red Lobsters Photos</a></li>
             <br>
-            <li><a href="Divs.html" target="_self">Purple Lobsters Photos</a></li>
+            <li><a href="Divs.html" target="_self">Purple/Pink Lobsters Photos</a></li>
             <br>
             <li><a href="Imagem.html" target="_self">Yellow Lobsters Photos</a></li>
             
