--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </header>
     
     <div id="menu">
-        <h2>Confira suas lagostas preferidas!</h2>
+        
+        <h2><section>Confira suas lagostas preferidas!</section></h2>
         <ul>
             <li><a href="Divs.html" target="_self">Blue Lobsters Photos</a></li>
             <br>
