Update Blue Lobster Photos.html

--- a/Blue Lobster Photos.html
+++ b/Blue Lobster Photos.html
@@ -14,7 +14,7 @@
     <div id="exercicio1">
     <h3> kawaii o////o</h3>
     <img src="blue lobster1.png"/>
-    <img src="Blue lobster2.png"/>
+    <img src="blue lobster2.png"/>
     </div>
     <div id="exercicio1nocss">
     <h4>Crazy XD</h4>
