--- a/Blue Lobster Photos.html
+++ b/Blue Lobster Photos.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <a href="index.html" target="_self">Voltar</a>
-    <h3>Exercício1</h3>
-    <div id="exercicio1">
+    <h3>BLUEEEEE</h3>
+    <div id="Blue Lobters Photos">
     <h3> kawaii o////o</h3>
     <img src="blue lobster1.png"/>
     <img src="blue lobster2.png"/>
