--- a/Purple and Pink Lobsters Photos.html
+++ b/Purple and Pink Lobsters Photos.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>BLUE LOBSTERS B)</title>
+    <title>PURPLE AND PINK LOBSTERS B)</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='style.css'>
     <script src='main.js'></script>
 </head>
 <body>
     <a href="index.html" target="_self">Voltar</a>
-    <h3>BLUEEEEE</h3>
-    <div id="Blue Lobters Photos">
+    <h3>PINK AND PURPLEEEEE</h3>
+    <div id="Purple and Pink Lobsters Photos">
     <h3> kawaii o////o</h3>
-    <img src="blue lobster1.jpg"/>
-    <img src="blue lobster2.jpg"/>
+    <img src="purple lobster1.jpg"/>
+    <img src="purple lobster2.jpg"/>
     </div>
-    <div id="Blue crazy">
+    <div id="Pink Purple crazy">
     <h4>Crazy XD</h4>
-    <img src="blue lobster3.jpg"/>
-    <img src="blue lobster4.jpg"/>
+    <img src="pink lobster1.jpg"/>
+    <img src="pink lobster2.jpg"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
