--- a/Purple/Pink Lobsters Photos.html
+++ b/Purple/Pink Lobsters Photos.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <a href="index.html" target="_self">Voltar</a>
-    <h3>BLUEEEEE</h3>
-    <div id="Blue Lobters Photos">
+    <h3>Exercício1</h3>
+    <div id="exercicio1">
     <h3> kawaii o////o</h3>
-    <img src="blue lobster1.jpg"/>
-    <img src="blue lobster2.jpg"/>
+    <img src="blue lobster1.png"/>
+    <img src="blue lobster2.png"/>
     </div>
-    <div id="Blue crazy">
+    <div id="exercicio1nocss">
     <h4>Crazy XD</h4>
-    <img src="blue lobster3.jpg"/>
-    <img src="blue lobster4.jpg"/>
+    <img src="blue lobster3.png"/>
+    <img src="blue lobster4.png"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
