--- a/Red Lobsters Photos.html
+++ b/Red Lobsters Photos.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <a href="index.html" target="_self">Voltar</a>
-    <h3>Exercício1</h3>
+    <h3>REEEED</h3>
     <div id="Red Lobters Photos">
     <h3> kawaii o////o</h3>
-    <img src="red lobster1.png"/>
-    <img src="red lobster2.png"/>
+    <img src="red lobster1.jpg"/>
+    <img src="red lobster2.jpg"/>
     </div>
-    <div id="exercicio1nocss">
+    <div id="Red crazy">
     <h4>Crazy XD</h4>
-    <img src="red lobster3.png"/>
-    <img src="red lobster4.png"/>
+    <img src="red lobster3.jpg"/>
+    <img src="red lobster4.jpg"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
