--- a/Yellow Lobsters Photos.html
+++ b/Yellow Lobsters Photos.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <a href="index.html" target="_self">Voltar</a>
-    <h3>BLUEEEEE</h3>
-    <div id="Blue Lobters Photos">
+    <h3>YELLOOOOOW</h3>
+    <div id="Yellow Lobsters Photos">
     <h3> kawaii o////o</h3>
-    <img src="blue lobster1.jpg"/>
-    <img src="blue lobster2.jpg"/>
+    <img src="Yellow lobster1.jpg"/>
+    <img src="Yellow lobster2.jpg"/>
     </div>
-    <div id="Blue crazy">
+    <div id="Yellow crazy">
     <h4>Crazy XD</h4>
-    <img src="blue lobster3.jpg"/>
-    <img src="blue lobster4.jpg"/>
+    <img src="Yellow lobster3.jpg"/>
+    <img src="Yellow lobster4.jpg"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
