--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         
         <h2><section>Confira suas lagostas preferidas!</section></h2>
         <ul>
-            <li><a href="Divs.html" target="_self">Blue Lobsters Photos</a></li>
+            <li><a href="Blue Lobster Photos.html" target="_self">Blue Lobsters Photos</a></li>
             <br>
-            <li><a href="Imagem.html" target="_self">Red Lobsters Photos</a></li>
+            <li><a href="Red Lobsters Photos.html" target="_self">Red Lobsters Photos</a></li>
             <br>
-            <li><a href="Divs.html" target="_self">Purple/Pink Lobsters Photos</a></li>
+            <li><a href="Purple and Pink Lobsters Photos.html" target="_self">Purple and Pink Lobsters Photos</a></li>
             <br>
-            <li><a href="Imagem.html" target="_self">Yellow Lobsters Photos</a></li>
+            <li><a href="Yellow Lobsters Photos.html" target="_self">Yellow Lobsters Photos</a></li>
            
         </ul> 
  </div>
