Update Red Lobsters Photos.html

--- a/Red Lobsters Photos.html
+++ b/Red Lobsters Photos.html
@@ -13,13 +13,13 @@
     <h3>REEEED</h3>
     <div id="Red Lobters Photos">
     <h3> kawaii o////o</h3>
-    <img src="red lobster1.jpg"/>
-    <img src="red lobster2.jpg"/>
+    <img src="red lobster1.jpg"width="300" height="400"/>
+    <img src="red lobster2.jpg"width="300" height="400"/>
     </div>
     <div id="Red crazy">
     <h4>Crazy XD</h4>
-    <img src="red lobster3.jpg"/>
-    <img src="red lobster4.jpg"/>
+    <img src="red lobster3.jpg"width="300" height="400"/>
+    <img src="red lobster4.jpg"width="300" height="400"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
