Update Blue Lobster Photos.html

--- a/Blue Lobster Photos.html
+++ b/Blue Lobster Photos.html
@@ -13,13 +13,13 @@
     <h3>BLUEEEEE</h3>
     <div id="Blue Lobters Photos">
     <h3> kawaii o////o</h3>
-    <img src="blue lobster1.jpg"/>
-    <img src="blue lobster2.jpg"/>
+    <img src="blue lobster1.jpg"width="300" height="400"/>
+    <img src="blue lobster2.jpg"width="300" height="400"/>
     </div>
     <div id="Blue crazy">
     <h4>Crazy XD</h4>
-    <img src="blue lobster3.jpg"/>
-    <img src="blue lobster4.jpg"/>
+    <img src="blue lobster3.jpg"width="300" height="400"/>
+    <img src="blue lobster4.jpg"width="300" height="400"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
