Update Purple and Pink Lobsters Photos.html

--- a/Purple and Pink Lobsters Photos.html
+++ b/Purple and Pink Lobsters Photos.html
@@ -13,13 +13,13 @@
     <h3>PINK AND PURPLEEEEE</h3>
     <div id="Purple and Pink Lobsters Photos">
     <h3> kawaii o////o</h3>
-    <img src="purple lobster1.jpg"/>
-    <img src="purple lobster2.jpg"/>
+    <img src="purple lobster1.jpg"width="300" height="400"/>
+    <img src="purple lobster2.jpg"width="300" height="400"/>
     </div>
     <div id="Pink Purple crazy">
     <h4>Crazy XD</h4>
-    <img src="pink lobster1.jpg"/>
-    <img src="pink lobster2.jpg"/>
+    <img src="pink lobster1.jpg"width="300" height="400"/>
+    <img src="pink lobster2.jpg"width="300" height="400"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
