Update Yellow Lobsters Photos.html

--- a/Yellow Lobsters Photos.html
+++ b/Yellow Lobsters Photos.html
@@ -13,13 +13,13 @@
     <h3>YELLOOOOOW</h3>
     <div id="Yellow Lobsters Photos">
     <h3> kawaii o////o</h3>
-    <img src="Yellow lobster1.jpg"width="300" height="400"/>
-    <img src="Yellow lobster2.jpg"width="300" height="400"/>
+    <img src="yllow lobster1.jpg"width="300" height="400"/>
+    <img src="yellow lobster2.jpg"width="300" height="400"/>
     </div>
     <div id="Yellow crazy">
     <h4>Crazy XD</h4>
-    <img src="Yellow lobster3.jpg"width="300" height="400"/>
-    <img src="Yellow lobster4.jpg"width="300" height="400"/>
+    <img src="yellow lobster3.jpg"width="300" height="400"/>
+    <img src="yellow lobster4.jpg"width="300" height="400"/>
     </div>
     <br> <br> <br> <br> <br> <br> 
 </body>
