Update Yellow Lobsters Photos.html

--- a/Yellow Lobsters Photos.html
+++ b/Yellow Lobsters Photos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>BLUE LOBSTERS B)</title>
+    <title>YELLOW LOBSTERS B)</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='style.css'>
     <script src='main.js'></script>
@@ -13,7 +13,7 @@
     <h3>YELLOOOOOW</h3>
     <div id="Yellow Lobsters Photos">
     <h3> kawaii o////o</h3>
-    <img src="yllow lobster1.jpg"width="300" height="400"/>
+    <img src="yellow lobster1.jpg"width="300" height="400"/>
     <img src="yellow lobster2.jpg"width="300" height="400"/>
     </div>
     <div id="Yellow crazy">
